--- a/1.ipynb
+++ b/1.ipynb
@@ -5,9 +5,11 @@
     "colab": {
       "name": "Innopolis Try #5.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
+      "collapsed_sections": [
+        "DXEFlTYxknQB"
+      ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPfu3ToG8thTsEsAiOO4PCe",
+      "authorship_tag": "ABX9TyM2StINo95ySFaNTsmVBhEa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,20 +37,20 @@
         "id": "dE9WPUo5A0kK"
       },
       "source": [
-        "import zipfile\n",
-        "from google.colab import output\n",
-        "from google.colab import drive\n",
         "import os\n",
         "import cv2 as cv\n",
         "import numpy as np\n",
-        "from sklearn.model_selection import train_test_split\n",
+        "import time\n",
+        "import zipfile\n",
+        "\n",
         "import keras\n",
+        "import matplotlib.pyplot as plt\n",
+        "from google.colab import output, drive\n",
+        "from tensorflow.keras.optimizers import Adam\n",
         "from keras.models import Sequential\n",
         "from keras.layers import Conv2D, Dense, Flatten, Activation\n",
         "from keras.layers import MaxPooling2D, Dropout, BatchNormalization\n",
-        "import matplotlib.pyplot as plt\n",
-        "from tensorflow.keras.optimizers import Adam\n",
-        "import time"
+        "from sklearn.model_selection import train_test_split"
       ],
       "execution_count": null,
       "outputs": []
